--- a/TenderInfo/Views/Account/ImportModal.cshtml
+++ b/TenderInfo/Views/Account/ImportModal.cshtml
@@ -9,8 +9,8 @@
                 <div class="container-fluid">
                     <div class="form-horizontal">
                         <form id="ImportForm" method="post" enctype="multipart/form-data">
-                            <input id="tbxImportID" name="tbxImportID" type="text" />
-                            <input id="tbxImportType" name="tbxImportType" type="text" />
+                            <input id="tbxImportID" name="tbxImportID" type="text" class="hidden" />
+                            <input id="tbxImportType" name="tbxImportType" type="text" class="hidden" />
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
