--- a/TenderInfo/Views/Account/NewAccountModal.cshtml
+++ b/TenderInfo/Views/Account/NewAccountModal.cshtml
@@ -10,7 +10,7 @@
                 <div class="container-fluid">
                     <div class="form-horizontal">
                         <form id="NewAccountForm" method="post" enctype="multipart/form-data">
-                            <input id="tbxProjectType" name="tbxProjectType" type="text" class="form-control" />
+                            <input id="tbxProjectType" name="tbxProjectType" type="text" class="form-control hidden" />
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
