--- a/TenderInfo/Views/TechnicSpecifiction/AddComprehensive.cshtml
+++ b/TenderInfo/Views/TechnicSpecifiction/AddComprehensive.cshtml
@@ -21,8 +21,8 @@
     </div>
     <div class="box-body">
         <form id="AddForm" method="post" enctype="multipart/form-data">
-            <input id="tbxFirstList" name="tbxFirstList" class="" />
-            <input id="tbxSecondList" name="tbxSecondList" class="" />
+            <input id="tbxFirstList" name="tbxFirstList" class="hidden" />
+            <input id="tbxSecondList" name="tbxSecondList" class="hidden" />
             <div class="row">
                 <div class="col-md-12">
                     <div class="form-group">
