--- a/TenderInfo/Views/TechnicSpecifiction/ApproveComprehensive.cshtml
+++ b/TenderInfo/Views/TechnicSpecifiction/ApproveComprehensive.cshtml
@@ -14,8 +14,8 @@
                 <div class="nav-tabs-custom">
                     <div class="container-fluid">
                         <form id="reloadOneForm" method="post" enctype="multipart/form-data">
-                            <input id="tbxReLoadOneID" name="tbxReLoadOneID" class="" />
-                            <input id="tbxReLoadOneType" name="tbxReLoadOneType" class="" value="技术规格书" />
+                            <input id="tbxReLoadOneID" name="tbxReLoadOneID" class="hidden" />
+                            <input id="tbxReLoadOneType" name="tbxReLoadOneType" class="hidden" value="技术规格书" />
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
@@ -46,8 +46,8 @@
                 <div class="nav-tabs-custom">
                     <div class="container-fluid">
                         <form id="reloadTwoForm" method="post" enctype="multipart/form-data">
-                            <input id="tbxReLoadTwoID" name="tbxReLoadTwoID" class="" />
-                            <input id="tbxReLoadTwoType" name="tbxReLoadTwoType" class="" value="评分标准(技术)" />
+                            <input id="tbxReLoadTwoID" name="tbxReLoadTwoID" class="hidden" />
+                            <input id="tbxReLoadTwoType" name="tbxReLoadTwoType" class="hidden" value="评分标准(技术)" />
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
@@ -78,8 +78,8 @@
                 <div class="nav-tabs-custom">
                     <div class="container-fluid">
                         <form id="reloadThirdForm" method="post" enctype="multipart/form-data">
-                            <input id="tbxReLoadThirdID" name="tbxReLoadThirdID" class="" />
-                            <input id="tbxReLoadThirdType" name="tbxReLoadThirdType" class="" value="评分标准(商务)" />
+                            <input id="tbxReLoadThirdID" name="tbxReLoadThirdID" class="hidden" />
+                            <input id="tbxReLoadThirdType" name="tbxReLoadThirdType" class="hidden" value="评分标准(商务)" />
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
