--- a/TenderInfo/Views/Account/EditAccountFrame.cshtml
+++ b/TenderInfo/Views/Account/EditAccountFrame.cshtml
@@ -17,8 +17,8 @@
                 <div class="container-fluid">
                     <div class="form-horizontal">
                         <form id="FirstForm" method="post" enctype="multipart/form-data">
-                            <input id="tbxAccountFirstID" name="tbxAccountFirstID" type="text" />
-                            <input id="tbxAccountChildFirstID" name="tbxAccountChildFirstID" type="text" />
+                            <input id="tbxAccountFirstID" name="tbxAccountFirstID" type="text" class="hidden" />
+                            <input id="tbxAccountChildFirstID" name="tbxAccountChildFirstID" type="text" class="hidden" />
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
@@ -86,8 +86,8 @@
                 <div class="container-fluid">
                     <div class="form-horizontal">
                         <form id="SecondForm" method="post" enctype="multipart/form-data">
-                            <input id="tbxAccountSecondID" name="tbxAccountSecondID" type="text" />
-                            <input id="tbxAccountChildSecondID" name="tbxAccountChildSecondID" type="text" />
+                            <input id="tbxAccountSecondID" name="tbxAccountSecondID" type="text"  class="hidden" />
+                            <input id="tbxAccountChildSecondID" name="tbxAccountChildSecondID" type="text"  class="hidden" />
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
@@ -155,8 +155,8 @@
                 <div class="container-fluid">
                     <div class="form-horizontal">
                         <form id="ThirdForm" method="post" enctype="multipart/form-data">
-                            <input id="tbxAccountThirdID" name="tbxAccountThirdID" type="text" />
-                            <input id="tbxAccountChildThirdID" name="tbxAccountChildThirdID" type="text" />
+                            <input id="tbxAccountThirdID" name="tbxAccountThirdID" type="text"  class="hidden" />
+                            <input id="tbxAccountChildThirdID" name="tbxAccountChildThirdID" type="text"  class="hidden" />
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
@@ -205,8 +205,8 @@
                 <div class="container-fluid">
                     <div class="form-horizontal">
                         <form id="FourForm" method="post" enctype="multipart/form-data">
-                            <input id="tbxAccountFourID" name="tbxAccountFourID" type="text" />
-                            <input id="tbxAccountChildFourID" name="tbxAccountChildFourID" type="text" />
+                            <input id="tbxAccountFourID" name="tbxAccountFourID" type="text"  class="hidden" />
+                            <input id="tbxAccountChildFourID" name="tbxAccountChildFourID" type="text"  class="hidden" />
                             <div class="row">
                                 <div class="col-md-3">
                                     <div class="form-group">
@@ -303,8 +303,8 @@
                 <div class="container-fluid">
                     <div class="form-horizontal">
                         <form id="FiveForm" method="post" enctype="multipart/form-data">
-                            <input id="tbxAccountFiveID" name="tbxAccountFiveID" type="text" />
-                            <input id="tbxAccountChildFiveID" name="tbxAccountChildFiveID" type="text" />
+                            <input id="tbxAccountFiveID" name="tbxAccountFiveID" type="text"  class="hidden" />
+                            <input id="tbxAccountChildFiveID" name="tbxAccountChildFiveID" type="text"  class="hidden" />
                             <div class="row">
                                 <div class="col-md-3">
                                     <div class="form-group">
@@ -407,8 +407,8 @@
                 <div class="container-fluid">
                     <div class="form-horizontal">
                         <form id="SixForm" method="post" enctype="multipart/form-data">
-                            <input id="tbxAccountSixID" name="tbxAccountSixID" type="text" />
-                            <input id="tbxAccountChildSixID" name="tbxAccountChildSixID" type="text" />
+                            <input id="tbxAccountSixID" name="tbxAccountSixID" type="text"  class="hidden" />
+                            <input id="tbxAccountChildSixID" name="tbxAccountChildSixID" type="text"  class="hidden" />
                             <div class="row">
                                 <div class="col-md-12">
                                     <div class="form-group">
