和ad登录方式同步

--- a/TenderInfo/Views/Home/Login.cshtml
+++ b/TenderInfo/Views/Home/Login.cshtml
@@ -9,7 +9,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>招标管理平台</title>
+    <title>招标管理平台--测试版</title>
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
     <!--[if lt IE 9]>
         <script src="/Scripts/html5shiv.js"></script>
@@ -34,11 +34,10 @@
                 <hr />
                 <form action="/Home/Login" method="post" role="form">
                     @*<div class="form-group">
-                        <label for="tbxUserName">员工编号</label>
-                        <input type="text" class="form-control input-lg" value="" required autofocus id="userNum" name="userNum" placeholder="输入员工编号">
-                    </div>*@
-                    <select id="userNum" name="userNum" class="form-control input-lg">
-                    </select>
+            <label for="tbxUserName">员工编号</label>
+            <input type="text" class="form-control input-lg" value="" required autofocus id="userNum" name="userNum" placeholder="输入员工编号">
+        </div>*@
+                    <select id="userNum" name="userNum" class="form-control input-lg"></select>
                     <div class="form-group">
                         <label for="tbxPwd">密码</label>
                         <input type="password" value="test" class="form-control input-lg" required id="pwd" name="pwd" placeholder="输入密码">
