--- a/TenderInfo/Views/Shared/_Layout.cshtml
+++ b/TenderInfo/Views/Shared/_Layout.cshtml
@@ -39,7 +39,7 @@
                 <!-- mini logo for sidebar mini 50x50 pixels -->
                 <span class="logo-mini"><b>菜单</b></span>
                 <!-- logo for regular state and mobile devices -->
-                <span class="logo-lg"><b>招标管理系统</b></span>
+                <span class="logo-lg"><b>招标管理--测试</b></span>
             </a>
             <!-- Header Navbar: style can be found in header.less -->
             <nav class="navbar navbar-static-top">
